Finally showing last created feature pages on main
Still need to check:

* Not changing the default title does not generate a new one
* Showing the date and last editor on the main page
* Update edit dates after first save

--- pt-br -----------

Finalmente mostrando as mais recentes paginas de recurso na frente

Ainda precisa ser checado:

* Deixar o titulo padrao nao gera um novo
* Mostrar a data e o ultimo editor na pagina de frente
* Atualizar a data de edicao apos a primeira alteracao


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@430 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/root/index.rhtml
+++ b/app/views/root/index.rhtml
@@ -8,6 +8,13 @@
 	                                      :locale => @locale }) %>
 	  </div>
 	<% end %>
+    <div class="channel" id="features">
+	  <%= render_component(:controller => 'wiki',
+	                       :action =>  'last',
+	                       :params => { :kind => 'feature',
+	                                    :context => 'partial',
+	                                    :locale => @locale }) %>
+	</div>
 	<div class="channel" id="nextrelease">
 	  <div class='channel-title'>
 	    <p><%= 'Planned features'.t -%></p>
