Shows last editor and modification date on main page
--- pt-br --------------

Mostra o ultimo editor e data de modificacao na pagina principal


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@432 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/list.rhtml
+++ b/app/views/report/list.rhtml
@@ -25,7 +25,7 @@
       <br/>
       <font size="-1">
         <i><%= h(headline.author) %></i>
-        (<%= headline.relative_to_now %>)
+        (<%= headline.happened_at.relative_to_now %>)
       </font>
     </p>
     <hr/>
