--- a/app/views/report/older.rhtml
+++ b/app/views/report/older.rhtml
@@ -16,7 +16,7 @@
               <% i += 1 %>
               <tr class="<%= i % 2 == 0 ? 'odd' : 'even' -%>">
                 <td class="date"><%= headline.happened_at-%></td>
-                <td class="relative"><%= headline.relative_to_now %></td>
+                <td class="relative"><%= headline.happened_at.relative_to_now %></td>
                 <td><%= headline.author %></td>
                 <td><%= link_to( h(headline.title(Translator.for(@locale))),
                                  { :controller => 'report',
