Shows last update data on every wiki page
--- pt-br ---------------

Mostra dados da ultima atualizacao em todas paginas wiki


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@433 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_editbar.rhtml
+++ b/app/views/wiki/_editbar.rhtml
@@ -1,4 +1,10 @@
 <div class='toolbar editbar'>
+  <% unless @page.last_editor.nil? || @page.modified_at.nil? %>
+    <p style='margin-top: 0'>
+      <i><%= 'Last update by %s at %s' / @page.last_editor.login /
+             @page.modified_at.to_s(:rfc822) -%></i>
+    </p>
+  <% end %>
   <% if current_user.nil? then %>
     <span class='disabled'>
       <%= 'Edit'.t -%> <%= '(requires authentication)'.t -%>
