Moves styling to CSS
--- pt-br --------------

Move estilizacao para o CSS


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@435 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -92,6 +92,8 @@ div.editbar {
     border-top: 1px dotted #9C9C9C;
 }
 
+div.editbar p { margin-top: 0 }
+
 div.channel_toolbar {
     border-bottom: 1px dotted #9C9C9C;
 }
