--- a/app/views/report/older.rhtml
+++ b/app/views/report/older.rhtml
@@ -1,4 +1,4 @@
-<% @title = "Motiro - Subversion - #{'Revision %s' / @revision_id}" %>
+<% @title = @reporter.channel_title %>
       <div id="revisions" class="window">
         <div class="inner">
           <table class="oldernews">
@@ -19,10 +19,7 @@
                 <td class="relative"><%= headline.happened_at.relative_to_now %></td>
                 <td><%= headline.author %></td>
                 <td><%= link_to( h(headline.title(Translator.for(@locale))),
-                                 { :controller => 'report',
-                                   :action => 'show',
-                                   :reporter => @name,
-                                   :id => headline.rid } )%></td>
+                                 @reporter.params_for(headline.rid) )%></td>
               </tr>
             <% end %>
             </tbody>
