--- a/app/views/account/login.rhtml
+++ b/app/views/account/login.rhtml
@@ -1,10 +1,10 @@
-<%= start_form_tag :action=> "login" %>
+<% form_tag(:action=> "login") do %>
 
 <div title="Account login" id="loginform" class="form">
     <h3>Please login</h3>
     
-    <% if @flash['notice'] %>
-      <div id="message"><%= @flash['notice'] %></div>
+    <% if flash['notice'] %>
+      <div id="message"><%= flash['notice'] %></div>
     <% end %>
 
     <label for="user_login">Login:</label><br/>
@@ -18,5 +18,5 @@
 
 </div>
 
-<%= end_form_tag %>
+<% end %>
 
