--- a/app/views/layouts/_top.rhtml
+++ b/app/views/layouts/_top.rhtml
@@ -17,8 +17,8 @@
     </script>
   </head>
   <body>
-      <% if @flash[:notice] -%>
-        <div id="notice"><%= @flash[:notice] %></div>
+      <% if flash[:notice] -%>
+        <div id="notice"><%= flash[:notice] %></div>
       <% end %>
       <div id="header">
         <%= render :partial => 'layouts/header' %>
