rails1.2: Eliminates deprecation warnings on acceptance tests
I think with that one we are done with the Rails warnings

--- pt-br ----------------------

rails1.2: Elimina avisos de depreciacao nos testes funcionais

Acho que com esse ficamos livres dos avisos de Rails


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@449 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/wiki_edit.rhtml
+++ b/app/views/layouts/wiki_edit.rhtml
@@ -1,7 +1,7 @@
 <%= render :partial => 'layouts/top' %>
       <div id="editor" class="window">
         <div class = "inner">
-          <%= start_form_tag :action => 'save' %>
+          <% form_tag :action => 'save' do %>
             <%= submit_tag 'Save modifications'.t, :class => 'button',
                                                   :name => 'btnSave' %>
             <%= submit_tag 'Discard'.t, :class => 'button',
@@ -11,7 +11,7 @@
                           :id => 'txaEditor',
                           :rows => '30' %>
             <%= @content_for_layout %>
-          <%= end_form_tag %>
+          <% end %>
         </div>
       </div>
       <div class='window'>
