Makes new events to be correctly record on the db
There is some work to be done yet. Things need to be shown
and the event reporter needs to be switched.

--- pt-br --------------

Faz com que os novos eventos sejam gravados corretamente na base

Ainda falta trabalho a ser feito. As coisas precisam ser mostradas
e o reporter de eventos precisa ser trocado.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@463 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_properties.rhtml
+++ b/app/views/wiki/_properties.rhtml
@@ -1,4 +1,5 @@
 <% if 'event' == params['kind'] %>
   <%= 'This event is planned for'.t -%>
-  <%= date_select 'headline', 'happened_at'  %>
+  <%= date_select 'page', 'happens_at'  %>
+  <%= hidden_field 'page', 'type', :value => 'Event' %>
 <% end %>
