Resizes 'page properties' and 'quick reference' areas
--- pt-br --------------

Redimensiona as areas 'propriedades da pagina' e 'referencia rapida'


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@464 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -202,7 +202,8 @@ div#editor div.inner {
 
 div#page_properties {
     margin: 0;
-    margin-right: 20.2em;
+    float: left;
+    width: 42em;
 }
 
 div#loading {
@@ -215,8 +216,7 @@ div#loading {
 
 div#wiki_reference {
     margin: 0;
-    float: right;
-    width: 18.4em;
+    margin-left: 43.6em;
 }
 
 div#page_properties div.inner {
