Shows the planned date when detailing an event page
--- pt-br ------------------

Mostra a data planejada quando detalha uma pagina de evento


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@469 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -25,7 +25,7 @@
                                         :id => 'cmbType') %>
           </p>
           <div id="extra_properties">
-            <%= render :partial => 'properties' -%>
+            <%= render :partial => 'properties_edit' -%>
           </div>
           <% if current_user.can_change_editors?(@page) %>
             <p>
@@ -49,7 +49,7 @@
         </div>
       </div>
     <% end %>
-    <%= observe_field('cmbType', :url => { :action => 'properties' },
+    <%= observe_field('cmbType', :url => { :action => 'properties_edit' },
                                  :with => 'kind',
                                  :update => 'extra_properties',
                                  :loading => "extraPropertiesLoading()",
