--- a/app/views/wiki/show.rhtml
+++ b/app/views/wiki/show.rhtml
@@ -1,3 +1,4 @@
 <%= content_tag :h1, @page.title %>
+<%= render :partial => 'properties_show' %>
 <%= @page.render_html(current_locale) %>
 <%= render :partial => 'editbar' %>
