Completely removes HTML rendering code from Page
Detected some duplication on {darcs,subversion}_detail.rhtml

--- pt-br ----------------

Acaba de remover o codigo de renderizacao HTML de Page

Detectado um pouco de duplicacao em {darcs,subversion}_detail.rhtml


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@482 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/subversion_detail.rhtml
+++ b/app/views/report/subversion_detail.rhtml
@@ -3,8 +3,7 @@
     <div class="pagetext">
       <h1><%= 'Revision %s' / @revision_id -%></h1>
 <% end %>
-<%= Page.new(:text => @headline.description(Translator.for(@locale))).
-      render_html %>
+<%= @renderer.render_html(@headline.description(Translator.for(@locale))) %>
           <div id="summary">
             <% @headline.changes.each do |change| %>
                 <%= change.render_summary -%>
