--- a/app/views/report/darcs_detail.rhtml
+++ b/app/views/report/darcs_detail.rhtml
@@ -3,8 +3,7 @@
     <div class="pagetext">
       <h1>Darcs patch</h1>
 <% end %>
-<%= Page.new(:text => @headline.description(Translator.for(@locale))).
-      render_html %>
+<%= @renderer.render_html(@headline.description(Translator.for(@locale))) %>
           <div id="summary">
             <% @headline.changes.each do |change| %>
                 <%= change.render_summary -%>
