Moves WikiRenderer locale definition to the constructor
--- pt-br --------------

Move a definicao do locale para o construtor de WikiRenderer


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@484 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/show.rhtml
+++ b/app/views/wiki/show.rhtml
@@ -1,4 +1,4 @@
 <%= content_tag :h1, @page.title %>
 <%= render :partial => 'properties_show' %>
-<%= @renderer.render_html(@page.text, current_locale) %>
+<%= @renderer.render_html(@page.text) %>
 <%= render :partial => 'editbar' %>
