Turns the authorization header into a partial page
--- pt-br ------------------

Transforma o cabecalho com detalhes de autorizacao em uma pagina parcial


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@492 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/account/_authorization.rhtml
+++ b/app/views/account/_authorization.rhtml
@@ -1,6 +1,7 @@
 <% if current_user.nil? then %>
   <div id="authentication_errors">
-	<%= render_component :action => 'availability',
+	<%= render_component :controller => 'account',
+	                     :action => 'availability',
 	                     :params => { :desired_login => flash[:desired_login] }%>
   </div>
   <%= content_tag :span, 'Passwords do not match'.t,
