Turns desired login availability check into a partial
--- pt-br ---------------------

Transforma a checagem de disponibilidade de login numa partial


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@493 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/account/_authorization.rhtml
+++ b/app/views/account/_authorization.rhtml
@@ -1,8 +1,6 @@
 <% if current_user.nil? then %>
   <div id="authentication_errors">
-	<%= render_component :controller => 'account',
-	                     :action => 'availability',
-	                     :params => { :desired_login => flash[:desired_login] }%>
+    <%= render :partial => 'account/availability' %>
   </div>
   <%= content_tag :span, 'Passwords do not match'.t,
                   :id => 'passwords_do_not_match', :class => 'warning',
