--- a/app/views/account/availability.rhtml
+++ b/app/views/account/availability.rhtml
@@ -1,5 +1,1 @@
-<% if @not_available %>
-  <span class="warning" id="username_not_available"><%= 'Not available'.t -%></span>
-<% else %>
-  <span style="position: absolute" />
-<% end %>
+<%= render :partial => 'availability' %>
