--- a/app/views/report/show.rhtml
+++ b/app/views/report/show.rhtml
@@ -1,7 +1,7 @@
-<% @title = 'Motiro - Darcs Patch' %>
+<% @title = "#{'Revision details'.t} - #{@headline.title(Translator.for(@locale))} (Motiro)" %>
 <% if ! @partial then %>
     <div class="pagetext">
-      <h1>Darcs patch</h1>
+      <h1><%= 'Revision %s' / truncate(@revision_id) -%></h1>
 <% end %>
 <%= @renderer.render_html(@headline.description(Translator.for(@locale))) %>
           <div id="summary">
