Caches revision details pages
--- pt-br ------------

Pre-armazena paginas de detalhamento de revisao


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@506 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/show.rhtml
+++ b/app/views/report/show.rhtml
@@ -3,19 +3,23 @@
     <div class="pagetext">
       <h1><%= 'Revision %s' / truncate(@revision_id) -%></h1>
 <% end %>
-<%= @renderer.render_html(@headline.description(Translator.for(@locale))) %>
+<% cache(:action => 'show', :action_suffix => 'summary') do %>
+  <%= @renderer.render_html(@headline.description(Translator.for(@locale))) %>
           <div id="summary">
             <% @headline.changes.each do |change| %>
                 <%= change.render_summary -%>
                 <br/>
             <% end %>
           </div>
+<% end %>
 <% if !@partial then %>
     </div>
+  <% cache(:action => 'show', :action_suffix => 'changes') do %>
     <div id="changes">
       <% @headline.changes.each do |change| %>
         <%= change.render_diff %>
       <% end %>
     </div>
+  <% end %>
 <% end %>
   
