Fixes caching for translations
--- pt-br ------------

Conserta o armazenamento para traducoes


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@507 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/show.rhtml
+++ b/app/views/report/show.rhtml
@@ -3,7 +3,7 @@
     <div class="pagetext">
       <h1><%= 'Revision %s' / truncate(@revision_id) -%></h1>
 <% end %>
-<% cache(:action => 'show', :action_suffix => 'summary') do %>
+<% cache(:action => 'show', :suffix => 'summary', :locale => @locale) do %>
   <%= @renderer.render_html(@headline.description(Translator.for(@locale))) %>
           <div id="summary">
             <% @headline.changes.each do |change| %>
@@ -14,7 +14,7 @@
 <% end %>
 <% if !@partial then %>
     </div>
-  <% cache(:action => 'show', :action_suffix => 'changes') do %>
+  <% cache(:action => 'show', :suffix => 'changes', :locale => @locale) do %>
     <div id="changes">
       <% @headline.changes.each do |change| %>
         <%= change.render_diff %>
