Caches pre-renderer wiki pages
This solution has a know bug related to page names with
special characters, but this probably won't need to be
fixed since they will be dropped before the next release.

Still need to find out how to properly test caching.

--- pt-br -----------------

Pre-armazena paginas wiki renderizadas

Esta solucao apresenta um defeito relacionado a nomes de
pagina com caracteres especiais/acentuados, mas isto
provavelmente nao vai precisar ser consertado ja que eles
serao removidos antes do proximo release.

Ainda falta descobrir como testar direito o caching


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@511 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/show.rhtml
+++ b/app/views/wiki/show.rhtml
@@ -1,4 +1,6 @@
-<%= content_tag :h1, @page.title %>
-<%= render :partial => 'properties_show' %>
-<%= @renderer.render_html(@page.text) %>
+<% cache(:controller=> 'wiki', :action => 'show', :page => @page.name) do %>
+  <%= content_tag :h1, @page.title %>
+  <%= render :partial => 'properties_show' %>
+  <%= @renderer.render_html(@page.text) %>
+<% end %>
 <%= render :partial => 'editbar' %>
