--- a/app/views/wiki/show.rhtml
+++ b/app/views/wiki/show.rhtml
@@ -1,4 +1,6 @@
-<% cache(:controller=> 'wiki', :action => 'show', :page => @page.name) do %>
+<% cache(:controller=> 'wiki', :action => 'show',
+         :page => @page.name, :locale_suffix => @locale) do
+%>
   <%= content_tag :h1, @page.title %>
   <%= render :partial => 'properties_show' %>
   <%= @renderer.render_html(@page.text) %>
