Changes to helper method for div pagetext
--- pt-br -------------------

Troca para metodo auxiliar para o div pagetext


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@542 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/layouts/wiki_show.rhtml
+++ b/app/views/layouts/wiki_show.rhtml
@@ -1,5 +1,5 @@
 <%= render :partial => 'layouts/top' %>
-  <div class="pagetext">
+<% pagetext do %>
     <%= @content_for_layout %>
-  </div>
+<% end %>
 <%= render :partial => 'layouts/bottom' %>
