Moves pagetext title to helper method
--- pt-br --------------

Move o titulo do pagetext para o metodo auxiliar


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@543 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/show.rhtml
+++ b/app/views/report/show.rhtml
@@ -1,6 +1,5 @@
 <% @title = "#{'Revision details'.t} - #{@headline.title(Translator.for(@locale))} (Motiro)" %>
-<% pagetext do %>
-      <h1><%= 'Revision %s' / truncate(@revision_id) -%></h1>
+<% pagetext('Revision %s' / truncate(@revision_id)) do %>
   <% cache(:action => 'show', :suffix => 'summary', :locale => @locale) do %>
     <%= @renderer.render_html(@headline.description(Translator.for(@locale))) %>
           <div id="summary">
