--- a/app/views/wiki/show.rhtml
+++ b/app/views/wiki/show.rhtml
@@ -1,8 +1,9 @@
-<% cache(:controller=> 'wiki', :action => 'show',
-         :page => @page.name, :locale_suffix => @locale) do
-%>
-  <%= content_tag :h1, @page.title %>
-  <%= render :partial => 'properties_show' %>
-  <%= @renderer.render_html(@page.text) %>
+<% pagetext(@page.title) do %>
+  <% cache(:controller=> 'wiki', :action => 'show',
+           :page => @page.name, :locale_suffix => @locale) do
+  %>
+    <%= render :partial => 'properties_show' %>
+    <%= @renderer.render_html(@page.text) %>
+  <% end %>
+  <%= render :partial => 'editbar' %>
 <% end %>
-<%= render :partial => 'editbar' %>
