Shows breadcrumbs for common wiki pages
--- pt-br ------------

Mostra migalhas para paginas wiki comuns


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@544 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -52,6 +52,13 @@ div.channel div.pagetext, div.pagetext div.pagetext {
     border: 0;
 }
 
+div#crumbs {
+    border-bottom: solid #d0d0d0 1px;
+    margin-bottom: -1em;
+    padding: .2em 0 .2em 0;
+    color: #808080
+}
+
 #mainpage {
     margin: 4px 332px 4px 0;
 }
