Displays breadcrumbs trail for older news page
--- pt-br --------------------

Mostra migalhas na pagina de noticias antigas


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@548 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/older.rhtml
+++ b/app/views/report/older.rhtml
@@ -1,6 +1,5 @@
 <% @title = @reporter.channel_title %>
-      <div id="revisions" class="window">
-        <div class="inner">
+<% pagetext(@title) do %>
           <table class="oldernews">
             <thead>
              <tr>
@@ -24,5 +23,4 @@
             <% end %>
             </tbody>
           </table>
-        </div>
-      </div>
+<% end %>
