Shows (unlinked) page history
--- pt-br ------------

Mostra historico de paginas (sem historico)


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@568 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_editbar.rhtml
+++ b/app/views/wiki/_editbar.rhtml
@@ -23,4 +23,7 @@
                      :action => 'edit',
                      :page_name => @page.name } )%>
   <% end %>
+  |
+  <%= link_to('Page history'.t, :controller => 'wiki', :action => 'history',
+                                :page_name => @page.name) -%>
 </div>
