Fixes issues with page history and caching
--- pt-br ------------

Conserta problemas com versionamento de paginas e caching


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@573 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/show.rhtml
+++ b/app/views/wiki/show.rhtml
@@ -1,7 +1,7 @@
 <% pagetext(@page.title) do %>
   <% cache(:controller=> 'wiki', :action => 'show',
-           :page => @page.name, :locale_suffix => @locale) do
-  %>
+           :page => @page.name, :locale_suffix => @locale,
+           :revision => @page_revision_id) do %>
     <%= render :partial => 'properties_show' %>
     <%= @renderer.render_html(@page.text) %>
   <% end %>
