Reverses the order of page revisions
New revisions now go to the end of the page.revisions list
instead of the head. This approach has many advantages:

* It feels much more natural to fetch the last revision at page.revisions.last then at page.revisions.first
* It makes the revision position fixed and allows for permanent links
* And it also makes the next change much simpler

--- pt-br ------------------

Inverte a ordem das revisoes de pagina

As novas revisoes agora sao inseridas ao final da lista
page.revisions ao inves do inicio. Esta abordagem tem
varias vantagens:

* Parece muito mais natural recuperar a ultima revisao em page.revisions.last do que em page.revisions.first
* Torna a posicao da revisao imutavel e permite links permanentes
* Alem de tudo, torna proxima mudanca muito mais simples


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@587 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/history.rhtml
+++ b/app/views/wiki/history.rhtml
@@ -9,8 +9,9 @@
       </tr>
     </thead>
     <tbody>
-    <% i = 0 %>
-    <% @page.revisions.each do |rev| %>
+    <% i = @page.revisions.size %>
+    <% @page.revisions.reverse.each do |rev| %>
+      <% i -= 1 %>
       <tr class="<%= i % 2 == 0 ? 'odd' : 'even' -%>">
         <td class="date"><%= rev.modified_at-%></td>
         <td class="relative"><%= rev.modified_at.relative_to_now %></td>
@@ -21,7 +22,6 @@
                                                     :page_name => @page.name,
                                                     :revision => i) -%></td>
       </tr>
-      <% i += 1 %>
     <% end %>
     </tbody>
   </table>
