Shows version number when displaying old page revisions
The version number does not look very good yet, but it is nothing
that some CSS tricks won't solve.

--- pt-br ------------------

Mostra numero de versao quando exibe revisoes antigas das paginas

O numero de versao nao esta muito bonito atualimente, mas isso nao
e nada que nao possa ser resolvido com um pouco de CSS.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@588 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/history.rhtml
+++ b/app/views/wiki/history.rhtml
@@ -9,10 +9,8 @@
       </tr>
     </thead>
     <tbody>
-    <% i = @page.revisions.size %>
     <% @page.revisions.reverse.each do |rev| %>
-      <% i -= 1 %>
-      <tr class="<%= i % 2 == 0 ? 'odd' : 'even' -%>">
+      <tr class="<%= rev.position % 2 == 0 ? 'odd' : 'even' -%>">
         <td class="date"><%= rev.modified_at-%></td>
         <td class="relative"><%= rev.modified_at.relative_to_now %></td>
         <td><%= rev.last_editor.login %></td>
@@ -20,7 +18,7 @@
                             :href => server_url_for(:controller => 'wiki',
                                                     :action => 'show',
                                                     :page_name => @page.name,
-                                                    :revision => i) -%></td>
+                                                    :revision => rev.position) -%></td>
       </tr>
     <% end %>
     </tbody>
