--- a/app/views/wiki/show.rhtml
+++ b/app/views/wiki/show.rhtml
@@ -2,6 +2,9 @@
   <% cache(:controller=> 'wiki', :action => 'show',
            :page => @page.name, :locale_suffix => @locale,
            :revision => @page_revision_id) do %>
+    <% if @page.respond_to?(:position) %>
+      <div><%= 'Revision %s' / @page.position.to_s -%></div>
+    <% end %>
     <%= render :partial => 'properties_show' %>
     <%= @renderer.render_html(@page.text) %>
   <% end %>
