CSS work for previous revision (r588)
--- pt-br -------------

Modificacao do CSS para a revisao anterior (r588)


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@589 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/show.rhtml
+++ b/app/views/wiki/show.rhtml
@@ -1,10 +1,7 @@
-<% pagetext(@page.title) do %>
+<% pagetext(@page.title, @page.respond_to?(:position) ? '(Revision %s)' / @page.position.to_s : nil) do %>
   <% cache(:controller=> 'wiki', :action => 'show',
            :page => @page.name, :locale_suffix => @locale,
            :revision => @page_revision_id) do %>
-    <% if @page.respond_to?(:position) %>
-      <div><%= 'Revision %s' / @page.position.to_s -%></div>
-    <% end %>
     <%= render :partial => 'properties_show' %>
     <%= @renderer.render_html(@page.text) %>
   <% end %>
