--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -54,9 +54,24 @@ div.channel div.pagetext, div.pagetext div.pagetext {
 
 div#crumbs {
     border-bottom: solid #d0d0d0 1px;
-    margin-bottom: -1em;
     padding: .2em 0 .2em 0;
     color: #808080
+}
+
+div.page-title {
+    margin-top: .4em;
+    margin-bottom: 1em;
+}
+
+span.page-title {
+    font-size: 2em;
+    font-weight: bold;
+}
+
+span#revision {
+    color: #808080;
+    font-size: 1em;
+    white-space: nowrap;
 }
 
 #mainpage {
