Displays number of revisions for each page
--- pt-br ----------------

Mostra o numero de revisoes para as paginas

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@594 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_editbar.rhtml
+++ b/app/views/wiki/_editbar.rhtml
@@ -24,6 +24,7 @@
                      :page_name => @page.name } )%>
   <% end %>
   |
-  <%= link_to('Page history'.t, :controller => 'wiki', :action => 'history',
-                                :page_name => @page.name) -%>
+  <%= link_to('Page history (%d revisions)' / @page.revisions.size,
+              :controller => 'wiki', :action => 'history',
+              :page_name => @page.name) -%>
 </div>
