Do not display revision count when not needed
--- pt-br ---------------

Nao mostra a contagem de revisoes quando nao precisa


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@595 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/wiki/_editbar.rhtml
+++ b/app/views/wiki/_editbar.rhtml
@@ -23,8 +23,5 @@
                      :action => 'edit',
                      :page_name => @page.name } )%>
   <% end %>
-  |
-  <%= link_to('Page history (%d revisions)' / @page.revisions.size,
-              :controller => 'wiki', :action => 'history',
-              :page_name => @page.name) -%>
+  <%= page_history_link(@page) -%>
 </div>
