Makes reporter feeds a little more RESTful
--- pt-br --------------------

Torna os feeds de reporter um pouco mais RESTosos


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@602 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/list.rhtml
+++ b/app/views/report/list.rhtml
@@ -1,9 +1,7 @@
 <div class='channel-title'>
   <%= link_to( image_tag('rss.png', :border => 0, :class => 'rss'),
-               { :controller => 'report',
-                 :action => 'rss',
-                 :reporter => @name,
-                 :locale => @locale },
+               { :controller => 'report', :action => 'list', :reporter => @name,
+                 :format => 'xml', :locale => @locale },
                :class => 'feed' )
   %>
   <p><%= h(@reporter.channel_title) %></p>
