Displays RSS icon linking to page history feed
--- pt-br ----------

Exibe icone RSS levando para o feed de historico de pagina

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@608 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -96,6 +96,11 @@ div.channel-body-outer {
     background: #a0ccee;
 }
 
+div.pagetext a.rss {
+    float: right;
+    margin: .3em;
+}
+
 a.feed {
     display: block;
     float: right;
