First draft for chunk-based diff table rendering
Still need to:

* Make the resulting html code shorter
* Make it look nicer
* Avoid thin lines when diff line is empty

--- pt-br -------------------

Primeiro rascunho para a renderizacao de tabela de comparacao baseada em chunks

Ainda preciso:

* Encurtar o codigo HTML resultante
* Embelezar o resultado final
* Evitar mostrar linhas finas demais quando encontrar uma linha de diff vazia


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@622 31482026-630c-0410-91bb-adf60aae4351

--- a/app/views/report/show.rhtml
+++ b/app/views/report/show.rhtml
@@ -13,7 +13,7 @@
 <% cache(:action => 'show', :suffix => 'changes', :locale => @locale) do %>
   <div id="changes">
     <% @headline.changes.each do |change| %>
-      <%= change.render_diff %>
+      <%= render_diff(change) %>
     <% end %>
   </div>
 <% end %>
