Displays separator in diff table between non-contiguous chunks
--- pt-br ---------

Mostra um separador na tabela de comparacao entre chunks nao-contiguos



git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@625 31482026-630c-0410-91bb-adf60aae4351

--- a/public/stylesheets/motiro.css
+++ b/public/stylesheets/motiro.css
@@ -167,7 +167,7 @@ table.diff tr {
 }
 
 table.diff td {
-    padding: 0 0.4em 0 0.4em;
+    padding: .05em .4em .05em .4em;
 }
 
 table.diff td.line_number {
@@ -196,6 +196,13 @@ tbody.deletion {
     background: #ffb8b8;
     border: #606060 solid;
     border-width: 1px 0 1px 0;
+}
+
+tbody.separator {
+   background: #d0d0c4;
+   text-align: center;
+   border: #606060 solid;
+   border-width: 1px 0 1px 0;
 }
 
 table.oldernews {
